--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.4",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.3.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
